# github-tests-analyzer

./: .gitignore  convert_to_docx.py  docker-compose.yml  main.py  mcp.py  repo_branches.json  update_deb.sh
lib/: analyze.py  analyzer.py  cache.py  html.py  report_service.py  report_template.jinja
v1/: main.py  pyproject.toml  requirements.txt
v1/lib/: analyze.py  analyzer.py  cache.py  html.py  json_report.py  log_parser.py  report_service.py  report_template.jinja
v1/tests/: test_artifact_cache.py
v2/: README.md  config.yaml  go.mod  main.go
v2/analyze/: analyzer.go  models.go
v2/collect/: cache.go  collector.go  extractor_artifacts.go  extractor_logs.go  models.go
v2/config/: config.go
v2/enrich/: enricher.go  models.go
v2/render/: html.go  json.go  renderer.go
