[tool.poetry]
name = "filedecorator"
version = "0.1.0"
description = "Analyzer for GitHub Actions logs: parses failed tests, stores parsed results in MongoDB, builds HTML reports."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.5"
Jinja2 = "^3.1.6"
pymongo = "^4.15.0"

[tool.poetry.group.dev.dependencies]
mongomock = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
